assets/base: add overflow-x hidden to stop elements from expanding x scroll fixes #3585

--- a/meinberlin/assets/scss/_base.scss
+++ b/meinberlin/assets/scss/_base.scss
@@ -29,6 +29,7 @@ html {
 
 body {
     margin: 0;
+    overflow-x: hidden; //stops horizontal scrolling with timeline
 }
 
 h1,
